--- a/packages/features/package.json
+++ b/packages/features/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@joshuadotson/ui",
+  "name": "@joshuadotson/features",
   "version": "0.0.0",
   "main": "./index.tsx",
   "types": "./index.tsx",
@@ -17,6 +17,6 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "react-aria": "^3.17.0"
+    "@internationalized/date": "^3.0.0"
   }
 }
